# Changelog

### Version 1.2.3-dev
- Added Client-side Heartbeat monitor.

### Version 1.2.2
- Added shortcuts for common properties in the Message class, e.g. message.app_id.
- Added lazy initialize parameters for Connections.
- Fixed minor bug in caching mechanism.
- Changed default socket timeout to 30.

### Version 1.2.1
- Changed default SSL version to TLSv1_2.
- Added simple caching mechanism to Message auto decode functionality.
- Fixed potential bug caused by Python being built with the OPENSSL_NO_SSLv3 flag.

### Version 1.2.0

#### Features
- Allow incoming messages to be delivered as a Message class.
- Introduced shortcuts to the Message class.
    - Message.Publish
    - Message.Ack / Message.Nack / Message.Reject
- Added generator based consumer function called => build_inbound_messages.

#### Improvements
- TSLv1 is now set as default on SSL connections.
- Added additional SSL parameters to UriConnection.
- When using the new Message class, properties are automatically utf-8 decoded when possible.
- Re-factored Connection and IO handling.

#### Bug Fixes
- Fixed PyPy bug with handling of integers.
- Python compiled without SSL support should no longer trigger an exception.